@@ -313,6 +313,14 @@ namespace IceInternal
         }
 
         //
+        // Return the protocol name;
+        //
+        public override string protocol()
+        {
+            return "tcp";
+        }
+
+        //
         // Return the timeout for the endpoint in milliseconds. 0 means
         // non-blocking, -1 means no timeout.
         //
