@@ -214,6 +214,15 @@ final class OpaqueEndpointI extends EndpointI
     }
 
     //
+    // Return the protocol name
+    //
+    public String
+    protocol()
+    {
+        return "opaque";
+    }
+
+    //
     // Return the timeout for the endpoint in milliseconds. 0 means
     // non-blocking, -1 means no timeout.
     //
