@@ -38,7 +38,7 @@ class TcpAcceptor implements Acceptor
 
         if(_traceLevels.network >= 1)
         {
-            StringBuffer s = new StringBuffer("accepting tcp connections at ");
+            StringBuffer s = new StringBuffer("listening for tcp connections at ");
 	    s.append(toString());
 
             java.util.List<String> interfaces = 
