@@ -320,6 +320,15 @@ final class UdpEndpointI extends EndpointI
     }
 
     //
+    // Return the protocol name
+    //
+    public String
+    protocol()
+    {
+        return "udp";
+    }
+
+    //
     // Return the timeout for the endpoint in milliseconds. 0 means
     // non-blocking, -1 means no timeout.
     //
