@@ -57,6 +57,15 @@ final class EndpointI extends IceInternal.EndpointI
     }
 
     //
+    // Return the protocol name
+    //
+    public String
+    protocol()
+    {
+        return _endpoint.protocol();
+    }
+
+    //
     // Return the timeout for the endpoint in milliseconds. 0 means
     // non-blocking, -1 means no timeout.
     //
