@@ -27,6 +27,10 @@ Changes since version 3.4.2
 General Changes
 ===============
 
+- Improved Ice.Trace.Network tracing for transport acceptors. The
+  tracing now shows when the object adapter starts listening for
+  incoming connections and when it starts accepting them.
+
 - Improved IceStorm batch subscriber sending to wait for the batch to
   be sent before sending another batch.
 
